added contact and pricies section

--- a/assets/_fonts_colors.sass
+++ b/assets/_fonts_colors.sass
@@ -1,7 +1,8 @@
 // Colors
 $main-color: #0081ff
 $sup-main: #3e74ba
-
+$table-color: rgb(73,41,191)
+$table-sup: #FF358F
 // Fonts
 @font-face
 	font-family: "HeitiStd"
