--- a/assets/main.css/main.css
+++ b/assets/main.css/main.css
@@ -274,3 +274,176 @@
 #reviews .wrapper .sup:nth-of-type(2) {
   border-left: 2px solid #fff;
   border-right: 2px solid #fff; }
+
+#price_d {
+  min-height: 2000px; }
+
+#price_d .wrapper {
+  min-height: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+table {
+  min-width: 480px;
+  width: 50%;
+  height: 100%;
+  color: #fff;
+  padding: 35px; }
+
+table span {
+  display: inline-block; }
+
+table caption {
+  color: black;
+  font-weight: bold;
+  font-style: italic;
+  background-color: inherit;
+  border-bottom: 1px solid #fff;
+  color: #fff;
+  padding: 10px 0; }
+
+table td {
+  text-align: center;
+  padding: 10px 42px;
+  border-left: 1px solid #fff; }
+
+table th {
+  padding: 10px 5px; }
+
+.col-m {
+  margin: 5rem auto;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 480px;
+  flex: 1 480px; }
+
+.col-l {
+  margin: 5rem auto;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 480px;
+  flex: 1 480px;
+  -ms-flex-item-align: stretch;
+  align-self: stretch; }
+
+.color-1 {
+  background-color: #4929bf;
+  -webkit-box-shadow: 5px 5px 25px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 25px 0px rgba(0, 0, 0, 0.5);
+  margin-bottom: 2rem; }
+
+.color-2 {
+  background-color: #FF358F;
+  -webkit-box-shadow: 5px 5px 25px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 25px 0px rgba(0, 0, 0, 0.5);
+  height: 100%; }
+
+.color-3 {
+  background-color: black;
+  -webkit-box-shadow: 5px 5px 25px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 25px 0px rgba(0, 0, 0, 0.5); }
+
+#contact {
+  background-image: url("../../images/footer.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 600px; }
+
+#contact .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  height: 600px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+#contact .wrapper .field {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: .9rem 0; }
+
+#contact .wrapper .field label {
+  color: #fff;
+  font-family: "HeitiStd";
+  letter-spacing: -4px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-right: 1rem; }
+
+#contact .wrapper .field textarea {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  resize: none; }
+
+.mywidth {
+  width: 300px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border-radius: 10px;
+  border: none;
+  padding: 10px; }
+
+.mywidth:focus {
+  outline: none; }
+
+button {
+  border: none;
+  border-radius: 10px;
+  background-color: #0081ff;
+  color: #fff;
+  padding: 7px 15px;
+  max-width: 130px;
+  margin-left: 120px;
+  margin-top: .9rem;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  outline: none; }
+
+button:active {
+  background-color: #3e74ba; }
+
+button:hover {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2); }
+
+.form-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+
+.info {
+  color: #fff; }
+
+.info i {
+  margin-right: 1.2rem; }
+
+.info ul li {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.fa-map-marker {
+  font-size: 2.2rem; }
+
+.fa-mobile {
+  font-size: 2.5rem; }
+
+.fa-envelope {
+  font-size: 2rem; }
