--- a/assets/_footer.sass
+++ b/assets/_footer.sass
@@ -2,6 +2,7 @@
   background-image: url('../../images/footer.png')
   background-repeat: no-repeat
   background-position: center
+  background-size: cover
   min-height: 600px
   .wrapper
     display: flex
