--- a/assets/main.css/main.css
+++ b/assets/main.css/main.css
@@ -52,7 +52,7 @@
   text-transform: capitalize;
   margin-left: .4rem; }
 
-#menu .navigation {
+.navigation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -60,17 +60,23 @@
   -ms-flex-align: center;
   align-items: center; }
 
-#menu .navigation a {
-  text-decoration: none;
-  margin-right: .8rem;
-  color: #fff;
-  font-size: 1.2rem;
+.nav-item {
   border-bottom: 3px solid transparent;
+  text-align: center;
   -webkit-transition: all ease-in-out .3s;
   transition: all ease-in-out .3s;
-  padding-bottom: 1.4rem; }
+  padding-bottom: 1.4rem;
+  margin-right: .8rem; }
 
-#menu .navigation a:hover {
+.nav-item:hover {
+  border-bottom: 3px solid deepskyblue; }
+
+.nav-link {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.2rem; }
+
+.active {
   border-bottom: 3px solid deepskyblue; }
 
 #showcase {
@@ -461,3 +467,19 @@ button:hover {
   #menu .main {
     -webkit-transform: skew(0deg, 3deg);
     transform: skew(0deg, 3deg); } }
+
+#price_complete {
+  min-height: 600px;
+  padding-top: 35vh;
+  margin-top: 30vh; }
+
+#price_complete .wrapper {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
